# csp-report-collector

./: .flake8  .flaskenv  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  settings.conf  settings.conf.example  setup.cfg
.github/workflows/: docker.yml  tests.yml
src/: csp_datamodel.py  csp_report_collector.py  csp_reports.py
src/csp_report_collector/: __init__.py
src/static/: style.css
src/templates/: reports.jinja  reports_detail.jinja
tests/: conftest.py  test_csp_report_collector.py  test_csp_reports.py
