[metadata]
name    = csp_report_collector
version = attr: csp_report_collector.__version__
#description = Simple Flask app for receiving and storing Content Security Policy reports
#license = MIT License

#[options]
#zip_safe = False
#include_package_data = True
#package_dir=
#    =src
#packages = find:
#install_requires =
#    flask
#    gunicorn
#    pymongo

#[options.packages.find]
#where=src
